# klp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  build.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  main.py  package-lock.json  pyproject.toml  test.py  test_models.py
.github/workflows/: workflow.yml
.run/: Run App.run.xml
alembic/: env.py
alembic/versions/: a8d2b98e5618_initial_database_schema.py
app/api/: __init__.py  events.py  favourites.py  locations.py
app/config/: __init__.py  base.py  local.py  local_docker.py  local_test.py  prod.py  register_settings.py
app/core/: config.py  database.py
app/models/: __init__.py  bike_tour.py  event.py  exhibition.py  location.py
app/schemas/: event.py
app/services/: __init__.py  embedding.py  geocoding.py  pdf_generator.py  scraper.py
app/services/scraper/: __init__.py  base.py  klp_scraper.py  test_data_scraper.py
app/web/: __init__.py  events.py  favourites.py  locations.py
docs/: UserStory1_ListEvents.md  UserStory2_ShowLocations.md  UserStory3_Map.md  UserStory4_Favourite.md  UserStory5_FavouritePdfExport.md  UserStory6_Exhibitons.md  UserStory7_ExhibitonsFavorites.md  UserStory8_EventPage.md  technical_specification_refined.md
e2e/: conftest.py  fixtures.ts
e2e/pages/: Events.ts  HomePage.ts  KlpPage.ts  PageObject.ts  events_page.py  home_page.py  klp_page.py  map_page.py  page_object.py
e2e/tests/: events.spec.ts  homePage.spec.ts  test_events_page.py  test_home_page.py
e2e_python/: conftest.py  fixtures.py
e2e_python/pages/: events_page.py  home_page.py  klp_page.py  map_page.py  page_object.py
e2e_python/tests/: test_home_page.py
pipeline/: Dockerfile  build.sh  push.sh
static/src/: input.css
templates/: base.html  event_detail.html  events.html  favourites.html  index.html  location_detail.html  locations.html  map.html
templates/partials/: event_list.html
tests/: conftest.py  factory.py  scraper_test.py
tests/api/: favourites_test.py
