[project]
name = "klp"
version = "0.1.0"
description = "Kulturelle Landpartie website with event listings, locations, and map"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.4",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "apscheduler>=3.10.4",
    "reportlab>=4.4.9",
    "pgvector>=0.4.2",
    "huggingface-hub>=1.4.1",
    "playwright>=1.59.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "testcontainers[postgres]>=4.14.1",
    "pytest-playwright>=0.7.2",
]

[tool.pytest.ini_options]
base_url = "http://localhost:8000"
testpaths = ["tests", "e2e_python/tests"]
pythonpath = [".", "e2e_python"]
